# OpenHarmonyDemo

./: .gitignore  README.md  bundle-lock.json  bundle.json  run.sh  runHi3516.sh
.deveco/: deveco.ini  prefer.json
applications/sample/camera/hap/: BUILD.gn
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/beeper/: BUILD.gn  beeper_demo.c
applications/sample/wifi-iot/app/human/: BUILD.gn  sensor.c
applications/sample/wifi-iot/app/human_light/: BUILD.gn  sensor_light.c
applications/sample/wifi-iot/app/key_traffic_lights/: BUILD.gn  key_traffic_lights_demo.c
applications/sample/wifi-iot/app/led/: BUILD.gn  led_demo.c
applications/sample/wifi-iot/app/light/: BUILD.gn  colorful_light.c
applications/sample/wifi-iot/app/mq_2/: BUILD.gn  mq2.c
applications/sample/wifi-iot/app/my_first_app/: BUILD.gn  hello_world.c
applications/sample/wifi-iot/app/play_song/: BUILD.gn  play_song_demo.c  play_song_demo.c.bak
applications/sample/wifi-iot/app/s3_button/: BUILD.gn  s3_button_demo.c
applications/sample/wifi-iot/app/traffic_light/: BUILD.gn  traffic_light_demo.c
applications/sample/wifi-iot/app/workspace/smart_home_2.0/toilet/: mqtt_utils.c  toilet_task.c  wifi_utils.c
applications/sample/wifi-iot/app/workspace/smart_shed_2.0/actuator/fan/: BUILD.gn
applications/sample/wifi-iot/app/workspace/smart_shed_2.0/actuator/full_spectrum_led/: BUILD.gn  led_task.c  led_task.h  main.c  mqtt_utils.c  mqtt_utils.h  sub_task.c  wifi_utils.c
base/iot_hardware/interfaces/kits/wifiiot_lite/: wifiiot_adc.h
(+1 files in other folders)
