

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        # "startup",
        # "led:leddemo",
        # "traffic_light:trafficlight",
        # "play_song:playsong",
        # "workspace/smart_home_2.0/toilet:smart_home_2.0",
        "workspace/smart_shed_2.0/actuator/full_spectrum_led:smart_shed_2.0",
    ]
}
